# piglot

./: .flake8  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: generate_pdf.yaml  release.yaml  test.yaml
docs/: Makefile  requirements.txt
docs/joss_paper/: paper.md  references.bib
docs/source/: api.rst  conf.py  examples.rst  index.rst  modules.rst  papers.md  piglot.bin.rst  piglot.losses.rst  piglot.objectives.rst  piglot.optimisers.botorch.rst  piglot.optimisers.rst  piglot.rst  piglot.solver.curve.rst  piglot.solver.dummy.rst  piglot.solver.links.rst  piglot.solver.rst  piglot.utils.rst  templates.rst
examples/: input_data_file_template.yaml
examples/abaqus_solver_fitting/: config.yaml  config_composite.yaml  reference.txt  sample.inp
examples/crate_solver_fitting/: config.yaml  reference.hres
examples/output_parameters/: config.yaml  description.md
examples/reference_reduction_composite/: config.yaml  config_reduction.yaml  description.md  reference_curve.txt
examples/sample_curve_design/: config.yaml  description.md
examples/sample_curve_fitting/: config.py  config.yaml  description.md
examples/sample_curve_fitting_composite/: config.yaml  description.md
examples/sample_curve_fitting_stochastic/: config.yaml  description.md
examples/sample_curve_fitting_stochastic_composite/: config.yaml  description.md
examples/solver_example/: config.yaml  input.py  input_solver.py  multi.py  multi_solver.py  sample_solver.py  sine.txt  single.py  single_solver.py  solver.py
piglot/: __init__.py  links.py  objective.py  optimiser.py  parameter.py  plotter.py  yaml_parser.py
piglot/losses/: __init__.py  benchmark_loss.py  links_loss.py  loss.py  weights.py
piglot/objectives/: __init__.py  analytical.py  compositions.py  design.py  fitting.py  full_field_fitting.py  response_objective.py  synthetic.py
piglot/optimisers/: __init__.py  aoa.py  bayes_botorch.py  bayes_botorch_cf.py  bayes_botorch_cf_stochastic.py  bayes_botorch_mf.py  bayes_botorch_mfcf.py  bayes_botorch_mfkg.py  bayes_botorch_stochastic.py  bayes_skopt.py  bayesian.py  direct.py  ga.py  lipo_opt.py  optimiser.py  prs_spsa.py  pso.py  query.py  random_search.py  spsa.py  spsa_adam.py  spsa_adam_cf.py
piglot/solver/: __init__.py  input_file_solver.py  multi_case_solver.py  script_solver.py  solver.py
piglot/utils/: __init__.py  assorted.py  interpolators.py  reduce_response.py  reductions.py  response_transformer.py  responses.py  scalarisations.py  solver_utils.py  surrogate.py  yaml_parser.py
test/: test_examples.py  test_examples_assertions.py  test_examples_plots.py  test_examples_plots_assertions.py  test_init_shot.py  test_objective.py  test_optimiser.py  test_parameter.py  test_sample_solvers.py  test_sample_solvers_assertions.py  test_solver_utils.py
test/example_init_shot/: parameter_output_2.yaml  parameter_output_3.yaml  parameter_output_4.yaml
test/examples/: aoa.yaml  aoa_1call.yaml  aoa_2call.yaml  bo.yaml  bo_1call.yaml  bo_1call_ei.yaml  bo_1call_kg.yaml  bo_1call_pi.yaml  bo_1call_qei.yaml  bo_1call_qkg.yaml  bo_1call_qpi.yaml  bo_1call_qucb.yaml  bo_2call.yaml  bo_discrete.yaml  curve_composite_scalarised.yaml  curve_full_composite_scalarised.yaml  curve_mo.yaml  curve_mo_composite.yaml  curve_mo_scalarisation.yaml  curve_mo_script_scalarisation.yaml  curve_mo_test.yaml  curve_reduction.yaml  curve_script_reduction.yaml  design_class.py  design_class.yaml  design_integral.yaml  design_missing_quantity_script.yaml  direct.yaml  direct_1call.yaml  direct_2call.yaml  dummy_composite.yaml  dummy_composite_ei.yaml  dummy_composite_pi.yaml  dummy_composite_stochastic.yaml  dummy_design.yaml  dummy_design_pred_str.yaml  dummy_filtering.yaml  dummy_simple.yaml  dummy_simple_pred_str.yaml  dummy_simple_stochastic.yaml  (+64 more)
test/examples_assertions/: analytical_composite_no_scalarisation.yaml  analytical_expression.yaml  analytical_missing_objectives.yaml  analytical_mo_missing_expression.yaml  analytical_negative_variance.yaml  analytical_random_missing_variance.yaml  bad_solver_output_script.yaml  bo_equalbounds.yaml  bo_q.yaml  bo_unkacq.yaml  (+68 more)
(+125 files in other folders)
